--- a/pages/autenticacion.html
+++ b/pages/autenticacion.html
@@ -11,16 +11,16 @@
         <h1>¿Tu App necesita sistema de autenticacion?</h1>
         <div class="textoThird">
             <p class="thirdImg">
-                <a href="resumenCoti.html"><img src="./../images/answer-5-1.png" id="calidadOptima">Calidad optima
+                <a href="resumenCoti.html"><img src="./../images/answer-5-1.png" id="calidadOptima">Si, con redes sociales y email
             </p></a>
             <p class="thirdImg">
-                <a href="resumenCoti.html"><img src="./../images/answer-5-2.png" id="calidadPrecio">Buena relacion calidad/precio
+                <a href="resumenCoti.html"><img src="./../images/answer-5-2.png" id="calidadPrecio">Si, con email
             </p></a>
             <p class="thirdImg">
-                <a href="resumenCoti.html"><img src="./../images/answer-5-3.png" id="noCalidad">No me importa tanto la calidad
+                <a href="resumenCoti.html"><img src="./../images/answer-5-3.png" id="noCalidad">No
             </p></a>
             <p class="thirdImg">
-                <a href="resumenCoti.html"><img src="./../images/answer-5-4.png" id="noCalidad">No me importa tanto la calidad
+                <a href="resumenCoti.html"><img src="./../images/answer-5-4.png" id="noCalidad">No lo se todavia
             </p></a>
         </div>
     </div>
