--- a/pages/monetizar.html
+++ b/pages/monetizar.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="pag3Cont">
-        <h1>¿Tu App necesita sistema de autenticacion?</h1>
+        <h1>¿Como monetiza con tu App?</h1>
         <div class="textoThird">
             <p class="thirdImg">
                 <a href="autenticacion.html"><img src="./../images/answer-4-1.png" id="calidadOptima">Aplicacion gratuita con publicidad
